<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="430dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/rounded_background"
    android:padding="5dp">




    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/popup_close_circle"
        android:gravity="center"
        android:id="@+id/p_close"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/challenge_name"
        android:text="@string/performance_title"
        android:layout_gravity="center|top"
        android:layout_marginTop="3dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/add_marker_line1"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p_top_scores"
        android:text="@string/p_top_scores"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p_user_top_score"
        android:text="@string/p_user_top_score"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p_user_score"
        android:text="@string/p_user_score"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/add_marker_line1"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/p_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />



    <Button
        android:id="@+id/p_ok"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:text="@string/p_ok"
        android:textColor="@color/Black"
        android:textAllCaps="false" />
    <Button
        android:id="@+id/p_again"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:text="@string/p_again"
        android:textColor="@color/Black"
        android:textAllCaps="false" />

</LinearLayout>