<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5D1171"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:background="@drawable/login_corners_bg"
            android:orientation="vertical"
            android:textAlignment="textStart">

            <EditText
                android:id="@+id/registerFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/register_first_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/Gray"
                android:textColor="@color/Black"
                android:layout_gravity="end"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/registerLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/register_last_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/Gray"
                android:textColor="@color/Black"
                android:layout_gravity="end"
                android:paddingTop="10dp" />
            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/Gray"
                android:textColor="@color/Black"
                android:layout_gravity="end"
                android:paddingTop="10dp" />

            <EditText
                android:id="@+id/registerPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/Black"
                android:ems="10"
                android:layout_gravity="end"
                android:hint="@string/register_password"
                android:textColorHint="@color/Gray"
                android:inputType="textPassword"
                android:textDirection="locale" />

            <TextView
                android:id="@+id/registerLoginPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/register_login"
                android:textColor="#36073E" />

            <Button
                android:id="@+id/btnSigUp"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="#9C27B0"
                android:text="@string/register_btn_signup"
                android:textAllCaps="false" />


        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>
