<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5D1171"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/main_welcome"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:background="@drawable/login_corners_bg"
            android:orientation="vertical"
            android:textAlignment="textStart">




            <Button
                android:id="@+id/main_map_btn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#9C27B0"
                android:text="@string/main_map"
                android:textAllCaps="false" />
            <Button
                android:id="@+id/main_logout_btn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#9C27B0"
                android:text="@string/main_log_out"
                android:textAllCaps="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_user_info"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>