<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dp">


    <View
        android:id="@+id/addmarker_bg"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:background="@drawable/addmarker_shape1">

    </View>

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/popup_close_circle"
        android:gravity="center"
        android:id="@+id/closePopup"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/challenge_name"
        android:text="@string/login_reset_pass"
        android:layout_gravity="center|top"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/email"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_gravity="top"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:text="@string/login_email"
        android:textColor="@color/white"
        android:textAppearance="@style/email"
        android:gravity="top"
        />
    <EditText
        android:id="@+id/reset_pass_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorLink="@color/white"
        android:paddingTop="10dp"
        android:textColor="@color/Black" />


    <Button
        android:id="@+id/reset_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:text="@string/login_reset_pass_btn"
        android:textColor="@color/Black"
        android:textAllCaps="false" />

</androidx.cardview.widget.CardView>
